# BattleShipsWithAI

./: AiPlayer.cpp  AiPlayer.h  Board.cpp  Board.h  CMakeLists.txt  CheatingAi.cpp  CheatingAi.h  Game.cpp  Game.h  HumanPlayer.cpp  HumanPlayer.h  HuntAndDestroyAi.cpp  HuntAndDestroyAi.h  Player.cpp  Player.h  README.md  RandomAi.cpp  RandomAi.h  main.cpp
